--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "moment": "^2.30.1",
+    "mysql2": "^3.15.1",
     "node-cache": "^5.1.2",
     "openai": "^5.22.0",
     "pdf2json": "^3.2.2",
     "pdf2table": "^0.0.2",
+    "sequelize": "^6.37.7",
     "zod": "3.25.76"
   },
   "scripts": {
