--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "dependencies": {
     "@paddle/paddle-node-sdk": "^3.2.1",
     "axios": "^1.11.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.15.1",
     "node-cache": "^5.1.2",
     "openai": "^5.22.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdf2json": "^3.2.2",
     "pdf2table": "^0.0.2",
     "sequelize": "^6.37.7",
